force-app/main/default/objects/SalesforcePushTracking__x/SalesforcePushTracking__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforcePushTracking</externalName>
    <label>Push Tracking Salesforce</label>
    <pluralLabel>Push Tracking Salesforce</pluralLabel>
</CustomObject>