force-app/main/default/objects/SalesforcePushTracking__x/fields/AccountC__c.field-meta.xml
<CustomField>
    <fullName>AccountC__c</fullName>
    <description>AccountC</description>
    <externalDeveloperName>AccountC</externalDeveloperName>
    <label>Account</label>
    <length>255</length>
    <referenceTo>SalesforceCustomer__x</referenceTo>
    <relationshipLabel>Push Tracking Salesforce</relationshipLabel>
    <relationshipName>PushTrackingSalesforce</relationshipName>
    <type>ExternalLookup</type>
</CustomField>