force-app/main/default/objects/SalesforcePushTracking__x/fields/CaseIDC__c.field-meta.xml
<CustomField>
    <fullName>CaseIDC__c</fullName>
    <description>CaseIDC</description>
    <externalDeveloperName>CaseIDC</externalDeveloperName>
    <label>ID Case</label>
    <length>255</length>
    <referenceTo>SalesforceCase__x</referenceTo>
    <relationshipLabel>Push Tracking Salesforce</relationshipLabel>
    <relationshipName>PushTrackingSalesforce</relationshipName>
    <type>ExternalLookup</type>
</CustomField>