force-app/main/default/objects/SalesforcePushTracking__x/fields/ContactIDC__c.field-meta.xml
<CustomField>
    <fullName>ContactIDC__c</fullName>
    <description>ContactIDC</description>
    <externalDeveloperName>ContactIDC</externalDeveloperName>
    <label>ContactIDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>