force-app/main/default/objects/SalesforcePushTracking__x/fields/DateTimeSendC__c.field-meta.xml
<CustomField>
    <fullName>DateTimeSendC__c</fullName>
    <description>DateTimeSendC</description>
    <externalDeveloperName>DateTimeSendC</externalDeveloperName>
    <label>DateTimeSendC</label>
    <type>DateTime</type>
</CustomField>