force-app/main/default/objects/SalesforcePushTracking__x/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>Id</description>
    <externalDeveloperName>Id</externalDeveloperName>
    <label>Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>