force-app/main/default/objects/SalesforcePushTracking__x/fields/InboxMessageOpenedC__c.field-meta.xml
<CustomField>
    <fullName>InboxMessageOpenedC__c</fullName>
    <description>InboxMessageOpenedC</description>
    <externalDeveloperName>InboxMessageOpenedC</externalDeveloperName>
    <label>InboxMessageOpened</label>
    <type>DateTime</type>
</CustomField>