force-app/main/default/objects/SalesforcePushTracking__x/fields/OpenDateC__c.field-meta.xml
<CustomField>
    <fullName>OpenDateC__c</fullName>
    <description>OpenDateC</description>
    <externalDeveloperName>OpenDateC</externalDeveloperName>
    <label>Data Apertura</label>
    <type>DateTime</type>
</CustomField>