force-app/main/default/objects/SalesforcePushTracking__x/fields/PlatformC__c.field-meta.xml
<CustomField>
    <fullName>PlatformC__c</fullName>
    <description>PlatformC</description>
    <externalDeveloperName>PlatformC</externalDeveloperName>
    <label>PlatformC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>