force-app/main/default/objects/SalesforcePushTracking__x/fields/TemplateC__c.field-meta.xml
<CustomField>
    <fullName>TemplateC__c</fullName>
    <description>TemplateC</description>
    <externalDeveloperName>TemplateC</externalDeveloperName>
    <label>Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>