force-app/main/default/objects/SalesforcePushTracking__x/fields/TimeInAppC__c.field-meta.xml
<CustomField>
    <fullName>TimeInAppC__c</fullName>
    <description>TimeInAppC</description>
    <externalDeveloperName>TimeInAppC</externalDeveloperName>
    <label>TimeInApp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>